--- a/src/Tests/Tests.csproj
+++ b/src/Tests/Tests.csproj
@@ -1,17 +1,15 @@
 
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net10.0-windows</TargetFramework>
     <GenerateAssemblyInfo>true</GenerateAssemblyInfo>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="MarkdownSnippets.MsBuild" PrivateAssets="all" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" />
     <PackageReference Include="ProjectFiles" />
-    <PackageReference Include="Xunit" />
-    <PackageReference Include="xunit.runner.visualstudio" PrivateAssets="all" />
+    <PackageReference Include="TUnit" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
-    <PackageReference Include="XunitContext" />
     <ProjectReference Include="..\MsWordDiff\MsWordDiff.csproj" />
     <Content Include="input.*.docx">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
