--- a/src/appveyor.yml
+++ b/src/appveyor.yml
@@ -8,7 +8,7 @@ build_script:
     Invoke-WebRequest "https://dot.net/v1/dotnet-install.ps1" -OutFile "./dotnet-install.ps1"
     ./dotnet-install.ps1 -JSonFile src/global.json -Architecture x64 -InstallDir 'C:\Program Files\dotnet'
 - dotnet build src --configuration Release
-- dotnet run --project  src\Tests -c Release --no-build -- --ignore-exit-code 8
+- dotnet run --project  src\Tests -c Release --no-build
 on_failure:
   - ps: Get-ChildItem *.received.* -recurse | % { Push-AppveyorArtifact $_.FullName -FileName $_.Name }
 test: off
