--- a/src/MsWordDiff/MsWordDiff.csproj
+++ b/src/MsWordDiff/MsWordDiff.csproj
@@ -30,5 +30,6 @@
     <PackageReference Include="Serilog" />
     <PackageReference Include="Serilog.Sinks.Console" />
     <PackageReference Include="Serilog.Sinks.File" />
+    <PackageReference Include="System.CommandLine" />
   </ItemGroup>
 </Project>
