--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -15,6 +15,7 @@
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.ImageMagick" Version="3.8.1" />
+    <PackageVersion Include="Verify.Serilog" Version="3.2.0" />
     <PackageVersion Include="Verify.TUnit" Version="31.8.0" />
     <PackageVersion Include="TUnit" Version="1.5.60" />
   </ItemGroup>
