--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -10,7 +10,7 @@
     <PackageVersion Include="ProjectDefaults" Version="1.0.163" />
     <PackageVersion Include="ProjectFiles" Version="0.4.0" />
     <PackageVersion Include="Serilog" Version="4.3.0" />
-    <PackageVersion Include="System.CommandLine" Version="2.0.1" />
+    <PackageVersion Include="CliFx" Version="2.3.6" />
     <PackageVersion Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
