--- a/src/MsWordDiff/MsWordDiff.csproj
+++ b/src/MsWordDiff/MsWordDiff.csproj
@@ -31,5 +31,6 @@
     <PackageReference Include="Serilog.Sinks.Console" />
     <PackageReference Include="Serilog.Sinks.File" />
     <PackageReference Include="CliFx" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
   </ItemGroup>
 </Project>
