--- a/src/Directory.Packages.props
+++ b/src/Directory.Packages.props
@@ -4,11 +4,11 @@
     <CentralPackageTransitivePinningEnabled>true</CentralPackageTransitivePinningEnabled>
   </PropertyGroup>
   <ItemGroup>
-    <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0-beta.25" />
+    <PackageVersion Include="MarkdownSnippets.MsBuild" Version="28.0.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.2" />
     <PackageVersion Include="Microsoft.Sbom.Targets" Version="4.1.5" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
-    <PackageVersion Include="ProjectDefaults" Version="1.0.171" />
+    <PackageVersion Include="ProjectDefaults" Version="1.0.172" />
     <PackageVersion Include="ProjectFiles" Version="0.5.0" />
     <PackageVersion Include="Serilog" Version="4.3.0" />
     <PackageVersion Include="CliFx" Version="2.3.6" />
@@ -17,7 +17,7 @@
     <PackageVersion Include="Verify.DiffPlex" Version="3.1.2" />
     <PackageVersion Include="Verify.ImageMagick" Version="3.8.3" />
     <PackageVersion Include="Verify.Serilog" Version="3.2.0" />
-    <PackageVersion Include="Verify.TUnit" Version="31.11.0" />
-    <PackageVersion Include="TUnit" Version="1.12.139" />
+    <PackageVersion Include="Verify.TUnit" Version="31.12.0" />
+    <PackageVersion Include="TUnit" Version="1.13.11" />
   </ItemGroup>
 </Project>
