--- a/src/MsWordDiff/MsWordDiff.csproj
+++ b/src/MsWordDiff/MsWordDiff.csproj
@@ -25,6 +25,7 @@
     </PropertyGroup>
   </Target>
   <ItemGroup>
+    <InternalsVisibleTo Include="Tests" />
     <PackageReference Include="ProjectDefaults" PrivateAssets="all" />
     <PackageReference Include="Microsoft.Sbom.Targets" PrivateAssets="all" Condition="'$(CI)' == 'true'" />
     <PackageReference Include="Serilog" />
